corrected container overflow

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,6 +1,7 @@
 /* Base styles */
 .navbar-brand {
   margin-left: 70px;
+
 }
 
 
@@ -25,6 +26,7 @@
 
 .navbar-head-style {
   padding: 2rem 3rem;
+  z-index: 1000;
 }
 
 .nav-link-style {
